Implement standard evaluation versions of spectrogram and periodogram Update manuals Make binning in periodogram optional

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,9 @@ export(find_peaks)
 export(fourier_periodogram)
 export(ls_periodogram)
 export(periodogram)
+export(periodogram_standard)
 export(spectrogram)
+export(spectrogram_standard)
 import(behavr)
 importFrom(data.table,"%between%")
 importFrom(data.table,":=")
